# fcx

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
evals/: README.md  cases.toml  run.py
skills/fcx/: SKILL.md
src/fcx/: __init__.py  __main__.py  agent.py  citations.py  cli.py  config.py  llm.py  model_server.py  paths.py  ripgrep.py
src/fcx/prompts/: __init__.py  max_turns.md.jinja  query.md.jinja  repair.md.jinja  system.md.jinja
src/fcx/tools/: __init__.py  base.py  glob.py  grep.py  read.py
tests/: test_citations.py  test_loop.py  test_model_server.py  test_paths.py  test_tools.py
